--- a/package.json
+++ b/package.json
@@ -13,7 +13,20 @@
     "react": "19.2.0",
     "react-native": "0.83.1",
     "@react-native/new-app-screen": "0.83.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-safe-area-context": "^5.5.2",
+    "@react-navigation/native": "^7.0.13",
+    "@react-navigation/native-stack": "^7.1.10",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-native-firebase/app": "^21.8.1",
+    "@react-native-firebase/auth": "^21.8.1",
+    "@react-native-firebase/firestore": "^21.8.1",
+    "victory-native": "^37.3.2",
+    "react-native-svg": "^15.9.0",
+    "react-native-vector-icons": "^10.2.0",
+    "@tanstack/react-query": "^5.62.11",
+    "react-native-config": "^1.5.3",
+    "date-fns": "^4.1.0",
+    "axios": "^1.7.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
