--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-config": "^1.5.3",
+    "react-native-gesture-handler": "^2.30.0",
+    "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.19.0",
     "react-native-svg": "^15.9.0",
