--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,12 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Firebase
+GoogleService-Info.plist
+google-services.json
