feat: Integrate Firebase, refactor API client, update color palette, and enhance Watchlist UI with sign-out modal.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,12 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json",
+  "extends": "./node_modules/@react-native/typescript-config/tsconfig.json",
   "compilerOptions": {
     "jsx": "react-native",
+    "lib": [
+      "ES2015",
+      "ES2017",
+      "DOM"
+    ],
     "types": [
       "jest"
     ],
