--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^23.7.0",
-    "@react-native-firebase/firestore": "^23.7.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.83.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.13",
@@ -19,6 +18,7 @@
     "@tanstack/react-query": "^5.62.11",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "firebase": "^12.7.0",
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-config": "^1.5.3",
